# claude_ide

./: .gitignore  .lizard_config.json  .prompt_learned_words.old  .prompt_learned_words.txt  .tui_dependencies.json  .tui_favorites.json  .tui_session_paths.json  .tui_workflows.json  CLAUDE.md  README.md  ai_customizer.py  codecloud.html  config_panel.py  favorites.py  git_merge_resolver.py  install.sh  lizard_tui.py  lizard_tui2.py  lstime.py  path_segments.py  project_md.txt  prompt_words.txt  prompt_writer.py  pyproject.toml  quick_input.py  remote-install.sh  session_manager.py  shortcuts.json  start.sh  status_viewer.py  tree_view.py  tui_demo.py  tui_env.py  uninstall.sh  upgrader.py  workflow_chain.py  workflow_executor.py  workflow_models.py  workflow_storage.py
.serena/: project.yml
.serena/memories/: ctrl-p-autocomplete-implementation.md  dev-conventions.md  session-2026-01-02-release-upgrade.md  session-2026-01-08-sqlit-redesign.md
docs/: session-management.md
