[project]
name = "my-env"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.75.0",
    "prompt-toolkit>=3.0.52",
    "textual[dev]>=6.11.0",
    "textual-autocomplete>=4.0.6",
    "textual-dev>=1.8.0",
]

[project.scripts]
tree-view = "tree_view:main"
tui-env = "tui_env:main"
config-panel = "config_panel:main"
favorites = "favorites:main"
prompt-writer = "prompt_writer:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
